fix: change about page information order on mobile

--- a/src/pages/AboutPage/AboutPageCover/styles.module.scss
+++ b/src/pages/AboutPage/AboutPageCover/styles.module.scss
@@ -2,7 +2,10 @@
 
 .container {
   height: calc(100vh - #{$header-height});
-  min-height: 800px;
+  min-height: 600px;
+  @media (min-width: 640px) {
+    min-height: 800px;
+  }
 
   &Left {
     background: url("~@assets/footer.png");
